ensure text-overflow is ellipses on long report names on desktop

--- a/ui/client-react/src/components/stage/stage.scss
+++ b/ui/client-react/src/components/stage/stage.scss
@@ -21,6 +21,7 @@ $breadCrumbsSeparatorColor: #c7c7c7;
             line-height:40px;
             display:flex;
             align-items:center;
+            overflow:hidden;
             > .qbIcon {
                 margin-right:6px;
             }
